--- a/0829quest/0829_Quest.ipynb
+++ b/0829quest/0829_Quest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d0aae597",
+   "id": "32ef1560",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f55a97eb",
+   "id": "6e8953e9",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ee96fb4c",
+   "id": "9a6370d7",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8455a623",
+   "id": "3ac85b7f",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "eca1a0f1",
+   "id": "eb179e6e",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "87a16c21",
+   "id": "f90ce969",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a0a2831",
+   "id": "8da5330f",
    "metadata": {},
    "source": [
     "## 회고(작성자 : 이서영)\n",
@@ -313,17 +313,18 @@
     "\n",
     "### 어려웠던 점\n",
     "> * 처음 진행하면서 편미분과 수치미분(중앙 차분, 전방차분)에 대한 개념들을 오랜만에 들어서 헷갈리는 내용도 많았다.\n",
-    "> * 이것과는 별개로 손실함수에 대해서 따로 정리하던 중 mse나 rmse가 아닌 Binary Crossentropy, Categroical Crossentropy에 대한 내용들이 어려웠다\n",
+    "> * 이것과는 별개로 손실함수에 대해서 따로 정리하던 중 mse나 rmse가 아닌 Binary Crossentropy, Categroical Crossentropy에 대한 내용들이 어려웠다. 아직 다 이해한것은 아니지만 빠른 시일내로 정리할 예정이다.\n",
+    "\n",
     "\n",
     "### 학습한 내용\n",
-    "> * 본 노드에서 모델에 적합한 매개변수들(가중치, 편향)등을 어떠한 알고리즘 등으로 찾는지에 대하여 학습하였고, 해당 알고리즘의 수식이나 구현하기 위한 코드들에 대해서도 학습하였다. \n",
+    "> * 본 노드에서 모델에 적합한 매개변수들(가중치, 편향)등을 어떠한 알고리즘 등으로 찾는지에 대하여 학습하였고, 해당 알고리즘의 수식이나 구현하기 위한 코드들에 대해서도 학습하였다. 개인적으로 학습한 내용은 하이퍼 파라미터나 미분을 통한 경사구하기, 과적합과 과소적합, 활성화함수 등에 대한 기본적인 내용을 다시 확인하고 정리하였다.\n",
     "\n",
     "### 알아간 점\n",
     "> * 손실함수에 대해서 rmse나 mse에 대해서만 사용하고 나머지는 거의 사용해보지 않은 내용들에 대해서 알게 되었으며, 경사하강법 중 미니배치 경사하강법과, 배치경사 하강법이 있다는 것을 알게 되었다.\n",
     "> * 또한 모델에서 학습을 시키고 연산을 수행 시 차원이 맞지 않았을 경우 맞추는 방법에 대해서도 알게 되었다.\n",
     "\n",
     "### 모호한점\n",
-    "> * 기울기를 미분으로 구할 때 수식에 대한 증명중 모호한 점이 있어서 다시 정리할 예정이다.\n",
+    "> * 기울기를 미분으로 구할 때 수식에 대한 증명중 모호한 점이 있어서 다시 정리할 예정이다. 또한 모델링에 대한 수식이 어떠한 수식인지만 나와있으며 증명에서 기억하는데 시간이 걸렸다. \n",
     "### 평가지표를 맞추기 위하여 노력한 점\n",
     "> * 1. 1번 프로젝트에서 LEARNING_RATE를 알기 위하여 1~0.001까지 많은 값들을 사용하였으며, loss를 줄이기 위해 for문을 3000까지 하였으며, 또한 난수를 지정하였다.\n",
     "> * 2. 2번 프로젝트에서는 학습시키는 열값들을 알기 위하여 데이터에 어떠한 열값들이 영향을 미치는지에 대해서 생각하였고 생각한 열들을 뺴보면서 rmse값을 확인 하였다.\n",
@@ -333,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7319b2be",
+   "id": "e5ad6c31",
    "metadata": {},
    "outputs": [],
    "source": []
