--- a/0919 quest/Untitled6 (4).ipynb
+++ b/0919 quest/Untitled6 (4).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8c390b1b",
+   "id": "75233324",
    "metadata": {},
    "source": [
     "1. 캐글 데이터분석 전과정이 성공적으로 진행되었는가?\t작성한 노트북을 캐글에 제출했다.\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9ab9a14",
+   "id": "0c32f5fa",
    "metadata": {},
    "source": [
     "1. ID : 집을 구분하는 번호\n",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5e6fec91",
+   "id": "4c2b58e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "20c4818e",
+   "id": "a71eb3cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c05ec4e3",
+   "id": "998e0cbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "409eae3e",
+   "id": "e0fa9f04",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4ff781f5",
+   "id": "edadfda1",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4b3dc9cf",
+   "id": "3d713e19",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0e3687ac",
+   "id": "2e304f79",
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a73986c2",
+   "id": "7bcef5cc",
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "36623ed3",
+   "id": "1675e4fa",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f5ce9e03",
+   "id": "5beedba4",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f0897203",
+   "id": "3e919d53",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f7ad0950",
+   "id": "82ab570d",
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ef6a6232",
+   "id": "a53e7296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,10 +998,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1bc923ce",
+   "execution_count": 14,
+   "id": "049157ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GradientBoostingRegressor</th>\n",
+       "      <td>128360.196497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RandomForestRegressor</th>\n",
+       "      <td>125487.071025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LGBMRegressor</th>\n",
+       "      <td>111920.367359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGBRegressor</th>\n",
+       "      <td>110318.669566</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    RMSE\n",
+       "GradientBoostingRegressor  128360.196497\n",
+       "RandomForestRegressor      125487.071025\n",
+       "LGBMRegressor              111920.367359\n",
+       "XGBRegressor               110318.669566"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_scores(models, train, y):\n",
     "    df = {}\n",
@@ -1030,8 +1088,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a677c052",
+   "execution_count": 15,
+   "id": "bc4693a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,8 +1119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9a209095",
+   "execution_count": 16,
+   "id": "0dcdc0ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,8 +1138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "23c816db",
+   "execution_count": 17,
+   "id": "ab140ab2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,7 +1188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5137c312",
+   "id": "3b0b2500",
    "metadata": {},
    "source": [
     "# 한번에 돌려서 모든 지정해둔 최적의 하이퍼파라미터를 찾는 방법이지만 매우 오래걸린다.\n",
@@ -1139,8 +1197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ba728c46",
+   "execution_count": 18,
+   "id": "485d18d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1215,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "52e623a2",
+   "id": "37059e5e",
    "metadata": {},
    "source": [
     "![image-3.png](attachment:image-3.png)"
@@ -1165,8 +1223,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d41e723f",
+   "execution_count": 19,
+   "id": "56b00088",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1238,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "93e9a419",
+   "id": "0f044aee",
    "metadata": {},
    "source": [
     "![image-2.png](attachment:image-2.png)"
@@ -1188,8 +1246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6465c81a",
+   "execution_count": 20,
+   "id": "9a4f96dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1261,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "8f32847d",
+   "id": "bcf90549",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -1211,8 +1269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e91f00d3",
+   "execution_count": 21,
+   "id": "b5ffbcc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1284,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "2b6654c0",
+   "id": "33d6a06d",
    "metadata": {},
    "source": [
     "![image-3.png](attachment:image-3.png)"
@@ -1235,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75e199bf",
+   "id": "bb0dc6e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a37c3a6",
+   "id": "4e2f7cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98d1d885",
+   "id": "eced396d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ce773b9",
+   "id": "004ed90c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9be3e4bc",
+   "id": "caee0848",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1365,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f0b209d7",
+   "id": "aee1c059",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -1315,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed6d1059",
+   "id": "ba9baf89",
    "metadata": {},
    "source": [
     "### 프로젝트 목표\n",
@@ -1349,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60f28dd9",
+   "id": "ec94d3fa",
    "metadata": {},
    "outputs": [],
    "source": []
